# ChatBot

./: .gitignore  README.md  todo
.github/: copilot-instructions.md
backend/: .env.example  README.md  email_whitelist.txt  migrate_add_avatar.py  migrate_add_timezone.py  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  schemas_auth.py  schemas_db.py  timezone_utils.py
backend/app/routers/: auth.py  chat.py  favorites.py  sessions.py  title.py  tts.py
backend/app/services/: gemini.py  voicevox.py
docs/: architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthModal.tsx  AvatarUpload.tsx  CorrectionCard.tsx  FavoritesDrawer.tsx  FlashcardModal.tsx  LoadingDots.tsx  MessageBubble.tsx  PlaybackButton.tsx  SelectionBookmark.tsx  Sidebar.tsx  UserProfileModal.tsx  VoiceRecorderButton.tsx
frontend/src/constants/: styles.ts
frontend/src/hooks/: useAudioPlayer.ts  useSelectionBookmark.ts  useSpeechRecognition.ts
frontend/src/lib/: api.ts  auth.ts  sessionApi.ts  timezone.ts
frontend/src/store/: useAuthStore.ts  useChatStore.test.ts  useChatStore.ts
frontend/src/types/: auth.ts  chat.ts  speech.d.ts
scripts/: dev-restart.sh  dev-start.sh  dev-stop.sh
