[project]
name = "jp-oral-trainer"
version = "0.1.0"
description = "FastAPI backend proxy for Google Gemini chat and TTS"
authors = [{ name = "ChatBot Team" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi~=0.115",
  "uvicorn[standard]~=0.32",
  "pydantic[email]~=2.9",
  "pydantic-settings~=2.6",
  "python-dotenv~=1.0",
  "google-generativeai~=0.8",
  "httpx~=0.27",
  "sqlalchemy~=2.0",
  "alembic~=1.13",
  "passlib[argon2]~=1.7",
  "python-jose[cryptography]~=3.3",
  "python-multipart~=0.0",
  "nanoid~=2.0",
  "argon2-cffi~=23.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
auto_reload = true
